fixed some bugs in server code